[package]
name = "linkerd-cli-trace"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
hyper = { version = "0.14.28", features = ["http2", "client", "tcp", "runtime"] }
indexmap = "2"
# k8s-openapi = { version = "0.20", default-features = false, features = [
    # "v1_22",
# ] }
# k8s-gateway-api = { version = "0.16", features = ["experimental"] }
kube = { version = "0.87.1", default-features = false, features = [
    "client",
    "derive",
    "runtime",
    "ws",
    "rustls-tls",
] }
linkerd-policy-controller-core = { path = "../../policy-controller/core" }
linkerd-policy-controller-grpc = { path = "../../policy-controller/grpc" }
linkerd-policy-controller-k8s-api = { path = "../../policy-controller/k8s/api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = { version = "0.10", default-features = false, features = ["transport", "tls"]}
tokio-stream = { version = "0.1", features = ["net"] }
termtree = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[dependencies.clap]
version = "4"
default-features = false
features = ["derive", "env", "std"]

[dependencies.tokio]
version = "1"
features = ["macros", "parking_lot", "rt", "rt-multi-thread", "signal"]

[dependencies.linkerd2-proxy-api]
version = "0.14"
features = ["inbound", "outbound"]